RESOLVED FIXED164311
REGRESSION (r199558): File paths selected for upload are stored using the wrong string encoding
https://bugs.webkit.org/show_bug.cgi?id=164311
Summary REGRESSION (r199558): File paths selected for upload are stored using the wro...
Andy Estes
Reported 2016-11-01 19:26:05 PDT
REGRESSION (r199558): File paths selected for upload are stored using the wrong string encoding
Attachments
Patch (1.95 KB, patch)
2016-11-02 10:22 PDT, Andy Estes
no flags
Patch (1.98 KB, patch)
2016-11-02 11:20 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2016-11-01 19:27:07 PDT
Andy Estes
Comment 2 2016-11-02 10:22:06 PDT
Tim Horton
Comment 3 2016-11-02 11:09:26 PDT
Comment on attachment 293669 [details] Patch This seems like one of those mistakes we've probably made in other places; should we look around and fix others?
Andy Estes
Comment 4 2016-11-02 11:12:50 PDT
(In reply to comment #3) > Comment on attachment 293669 [details] > Patch > > This seems like one of those mistakes we've probably made in other places; > should we look around and fix others? Yeah, we should. I filed https://bugs.webkit.org/show_bug.cgi?id=164330 about this.
Andy Estes
Comment 5 2016-11-02 11:20:03 PDT
WebKit Commit Bot
Comment 6 2016-11-02 11:55:36 PDT
Comment on attachment 293679 [details] Patch Clearing flags on attachment: 293679 Committed r208295: <http://trac.webkit.org/changeset/208295>
WebKit Commit Bot
Comment 7 2016-11-02 11:55:39 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 8 2016-11-05 15:42:38 PDT
Comment on attachment 293669 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=293669&action=review > Source/WebKit2/UIProcess/ios/forms/WKFileUploadPanel.mm:345 > - filenames.uncheckedAppend(fileURL.fileSystemRepresentation); > + filenames.uncheckedAppend(String::fromUTF8(fileURL.fileSystemRepresentation)); Instead of: String::fromUTF8(fileURL.fileSystemRepresentation) I believe we can, and should, just use: fileURL.path
Andy Estes
Comment 9 2017-01-09 12:56:54 PST
*** Bug 166473 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.