REGRESSION (r199558): File paths selected for upload are stored using the wrong string encoding https://bugs.webkit.org/show_bug.cgi?id=164311 <rdar://problem/26995374>

Reviewed by Tim Horton.

-[NSURL fileSystemRepresentation] returns a char* in file system representation, which on
iOS is UTF-8, but we were implicitly converting it to a String, which assumes a char* is
Latin-1 encoded.

* UIProcess/ios/forms/WKFileUploadPanel.mm:
(-[WKFileUploadPanel _chooseFiles:displayString:iconImage:]): Changed to use fromUTF8() to
convert fileURL.fileSystemRepresentation to a String.


Canonical link: https://commits.webkit.org/182054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208295 268f45cc-cd09-0410-ab3c-d52691b4dbfc